# Library_Manager_v1.0.1

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DATABASE.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_UX.md  IMPLEMENTATION_FEATURES.md  IMPLEMENTATION_NEW_FEATURES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_UX.md  INSTALL.md  LIBRARY_INDEXING_SUMMARY.md  QUICKSTART.md  README.md  SCRIPTS.md  UI_COMPONENTS.md  UX_ENHANCEMENTS.md  check-prerequisites.bat  check-prerequisites.ps1  install.bat  install.ps1  sample_rekordbox_export.xml  uninstall.bat  uninstall.ps1  verify_database_schema.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml
.scripts/: run_install_cmake.ps1
Source/: AcoustIDFingerprinter.cpp  AcoustIDFingerprinter.h  AnalysisWorker.cpp  AnalysisWorker.h  AudioPreviewComponent.cpp  AudioPreviewComponent.h  BatchMetadataEditor.cpp  BatchMetadataEditor.h  CuePointEditorComponent.cpp  CuePointEditorComponent.h  DatabaseManager.cpp  DatabaseManager.h  FileScanner.cpp  FileScanner.h  LibraryTableComponent.cpp  LibraryTableComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  OnboardingComponent.cpp  OnboardingComponent.h  PlaylistTreeComponent.cpp  PlaylistTreeComponent.h  RekordboxExporter.cpp  RekordboxExporter.h  SeratoExporter.cpp  SeratoExporter.h  TestDatabaseManager.cpp  TestLibraryComponents.cpp  TestRekordboxExport.cpp  ToastNotification.cpp  ToastNotification.h  TraktorExporter.cpp  TraktorExporter.h  WaveformComponent.cpp  WaveformComponent.h
